<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_background"
    android:gravity="center"
    android:orientation="vertical" >

    <com.videogo.widget.TitleBar
        android:id="@+id/title_bar_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:visibility="gone"
        android:background="@drawable/top_bar_bg" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:background="@drawable/common_title_back_selector"
            android:onClick="onClick" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/tiltle_button_selector"
            android:contentDescription="@string/describtion"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/tab_text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/auto_wifi_title_add_device"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="normal" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/addCameraContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgAnimation"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_height="185dp"
                android:src="@drawable/failure_account" />

            <TextView
                android:id="@+id/tvSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/added_camera_success_txt"
                android:textColor="@color/title_text"
                android:textSize="@dimen/device_set_text_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_camera_success_tip"
                android:textColor="@color/add_title_text_color"
                android:textSize="@dimen/device_set_small_text_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnAddCameraSuccess"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn_selector"
                android:text="@string/added_camera_success_txt"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ez_reaty_btn_selector"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLineConnet"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_selector"
                android:text="@string/ez_auto_wifi_line_connect"
                android:textColor="@color/white"
                android:visibility="gone" />

            <View
                android:id="@+id/helpTop"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/help"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/goto_help_error_page"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/realplay_tip_text_size"
                android:visibility="gone" />
        </LinearLayout>

        <!-- <View -->
        <!-- android:layout_width="1dp" -->
        <!-- android:layout_height="0dp" -->
        <!-- android:layout_weight="1" /> -->

        <TextView
            android:id="@+id/tvDeviceWifiConfigTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/wifi_connection_finish_need_refresh"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            android:visibility="gone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_set_camera_label"
            android:textColor="@color/white"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:text="@string/set_label_for_camera"
            android:visibility="gone"/>

        <com.donkingliang.labels.LabelsView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/labels_camera_name"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="25dp"
            android:padding="5dp"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            app:labelBackground="@drawable/label_bg_selector"
            app:labelTextColor="@drawable/label_text_color_selector"
            app:labelTextPaddingBottom="5dp"
            app:labelTextPaddingLeft="15dp"
            app:labelTextPaddingRight="15dp"
            app:labelTextPaddingTop="5dp"
            app:labelTextSize="14sp"
            app:lineMargin="10dp"
            app:maxSelect="1"
            app:selectType="SINGLE"
            app:wordMargin="10dp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_selector"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/complete_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/login_text_size"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llyCloundService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/ckbCloundService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@drawable/ckb_selector"
                android:button="@null"
                android:checked="false"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/cloud_free"
                android:textColor="@color/auto_tip_text"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/auto_blue_text"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineConnectContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="38dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imgLineConnectGuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:src="@drawable/wifi_connect_tip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/auto_wifi_line_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size" />

        <Button
            android:id="@+id/btnLineConnetOk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn_selector"
            android:text="@string/auto_wifi_line_connected"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectStateContainer"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/llyStatus1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_item_auto_wifi_connecting_status" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyStatus2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_item_auto_wifi_connecting_status" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyStatus3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/layout_item_auto_wifi_connecting_status" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>